--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -151,10 +151,13 @@ body {
 
 .lbl-percentage{
     position: absolute;
-    margin-top: -128px;
-    margin-left: 15px;
+    /* margin-top: -128px; */
+    /* margin-left: 15px; */
     color: black;
     font-size: 30px;
+    /* vertical-align: middle; */
+    padding-top: 21%;
+    padding-left: 19%;
 }
 .lbl-topic{
     font-size: 12px;
