--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -156,8 +156,15 @@ body {
     color: black;
     font-size: 30px;
     /* vertical-align: middle; */
-    padding-top: 21%;
-    padding-left: 19%;
+    /* padding-top: 21%; */
+    /* padding-left: 19%; */
+    /* display: inline-block; */
+    width: 100%;
+    height: 100%;
+    top: 35%;
+    left: 0;
+    /* display: table-cell; */
+    /* text-align: center; */
 }
 .lbl-topic{
     font-size: 12px;
